--- a/app/src/main/res/layout/bank_page.xml
+++ b/app/src/main/res/layout/bank_page.xml
@@ -176,6 +176,13 @@
         </LinearLayout>
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="#000000"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp" />
+
     <!-- Footer Links -->
     <LinearLayout
         android:layout_width="match_parent"
